route-table.tf
resource "aws_route_table" "wproute" {
  vpc_id = aws_vpc.wpvpc.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.wpigw.id
  }
  tags = {
    Name = "wproute"
  }
}

resource "aws_route_table_association" "RT1" {
  subnet_id      = aws_subnet.public-subnet.id
  route_table_id = aws_route_table.wproute.id
}
